 * Added `before_create_page`, `before_edit_page`, `before_delete_page` hooks (Karl Hobley)
 * Updated font sizes and colours to improve legibility of admin menu and buttons (Stein Strindhaug)
 * Added pagination to "choose destination" view when moving pages (Nick Smith, Žan Anderle)
 * Fix: Migrations for wagtailcore and project template are now reversible (Benjamin Bach)
 * Fix: The default image format label text ('Full width', 'Left-aligned', 'Right-aligned') is now localised (Mikalai Radchuk)
 * Fix: Text on the front-end 'password required' form is now marked for translation (Janneke Janssen)
 * Fix: Text on the page view restriction form is now marked for translation (Luiz Boaretto)
 * Fix: Fixed toggle behaviour of userbar on mobile (Robert Rollins)
 * Fix: Image rendition / document file deletion now happens on a post_delete signal, so that files are not lost if the deletion does not proceed (Janneke Janssen)
 * Fix: "Your recent edits" list on dashboard no longer leaves out pages that another user has subsequently edited (Michael Cordover, Kees Hink, João Luiz Lorencetti)
 * Fix: `InlinePanel` now accepts a `classname` parameter as per the documentation (emg36, Matt Westcott)
 * Fix: Disabled use of escape key to revert content of rich text fields, which could cause accidental data loss (Matt Westcott)


1.6.3 (XX.XX.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Restore compatibility with django-debug-toolbar 1.5 (Matt Westcott)


1.6.2 (02.09.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Initial values of checkboxes on group permission edit form now are visible on Django 1.10 (Matt Westcott)


1.6.1 (26.08.2016)
~~~~~~~~~~~~~~~~~~

 * Added ``WAGTAIL_ALLOW_UNICODE_SLUGS`` setting to make Unicode support optional in page slugs (Matt Westcott)
 * Fix: Wagtail's middleware classes are now compatible with Django 1.10's new-style middleware (Karl Hobley)
 * Fix: The `Pages.can_create_at` method is now checked in the create page view (Mikalai Radchuk)