@@ -3,6 +3,7 @@ from __future__ import absolute_import, unicode_literals
 import warnings
 
 from django.db import models
+from django.db.models.expressions import Value
 
 from wagtail.utils.deprecation import RemovedInWagtail18Warning
 from wagtail.wagtailsearch.backends.base import (
@@ -76,7 +77,12 @@ class DatabaseSearchResults(BaseSearchResults):
         return queryset.filter(q).distinct()[self.start:self.stop]
 
     def _do_search(self):
-        return self.get_queryset()
+        queryset = self.get_queryset()
+
+        if self._score_field:
+            queryset = queryset.annotate(**{self._score_field: Value(None, output_field=models.FloatField())})
+
+        return queryset
 
     def _do_count(self):
         return self.get_queryset().count()
